<resources>

    <string name="hello">Hello World, BroadcastTest!</string>
    <string name="app_name">ViterbiAlgorithm</string>
    <string name="hello_world">A............................................................F............................................................J............................................................;</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_training">Training</string>
    <string name="space_button">Start/Space</string>
    <string name="previous_button">Main</string>
    <string name="delete_button">Delete</string>
    <string name="display">Press &quot;Start&quot; to begin training.</string>

</resources>